[2단계 - 로또(수동)] 조시(조현근) 미션 제출합니다. (#498)
* docs: 기능목록 작성

* feat(lotto): add random lotto number generator function

* feat(lotto): add checkWinning function

* feat(LottoGame): add buyLotto function

* feat(Lottos): add compareAllLotto function

* feat(LottoGame): add calculateYield function

* feat(InputView): add askMoneyInput function

* feat(InputView): add askWinningNumbers function

* docs: 기능 목록 업데이트

* feat(InputView): add askBonusNumber function

* docs: 기능 목록 업데이트

* feat(OutputView): add printLottosInformations function

* feat(OutputView): add printWinningStatistic function

* feat(OutputView): add printYield function

* feat(LottoController): add main function

* fix: printLottosInformations function bug fix

* refactor(Money): change integer money to instance money

* refactor(LottoGame): change return value

* refactor(LottoGame): separate method

* refactor(Lottos): separate method

* refactor(Lotto): use enum in checkWinning

* refactor: use enum in overall code

* fix(OutputView): fix printWinningStatistic bug

* fix(InputView): change inputMoney type to string

* fix(LottoGame): fix divided by zero error

* style: adopt convention

* refactor(OutputView): change for loop to steam

* fix(Lotto): sort lotto numbers

* fix(InputView): bug fix winningNumbers not number

* fix(InputView): bug fix bonusNumber not number

* refactor(Lotto): divide method

* style(Lotto): change magicNumber to constant

* fix(Lotto): change wrong constant

* refactor(Rewards): divide method

* refactor(OutputView): divide method

* style(LottoGame): change magicNumber to constant

* style: move private method to below

* docs: 기능목록 업데이트

* feat(InputView): add lotto number input exception checker

* fix(InputView): fix wrong boundary bug

* docs: 기능목록 재정의

* refactor(Lottos): 정적 팩터리 메서드 추가

* refactor(Lotto): 정적 팩터리 메서드 추가

* feat(LottoGame): 당첨번호 입력기능 추가

* feat: LottoNumber 원시값 포장
