@@ -3,44 +3,41 @@ import static org.assertj.core.api.Assertions.assertThat;
 import domain.Lotto;
 import domain.LottoNumber;
 import domain.Lottos;
-import java.util.Arrays;
+import domain.ManualLottoGenerator;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 public class LottosTest {
 
-    private Lottos lottos;
-
-    @BeforeEach
-    void init() {
-        Lotto lotto1 = new Lotto(Stream.of(1, 2, 3, 4, 5, 6)
-                .map(LottoNumber::new)
-                .collect(Collectors.toSet()));
-        Lotto lotto2 = new Lotto(Stream.of(1, 2, 3, 7, 8, 9)
-                .map(LottoNumber::new)
-                .collect(Collectors.toSet()));
-
-        lottos = new Lottos(Arrays.asList(lotto1, lotto2));
+    private Lottos makeLottos() {
+        Lottos lottos = Lottos.init();
+        lottos.add(Lotto.generateLotto(new ManualLottoGenerator(List.of(1, 2, 3, 4, 5, 6))));
+        lottos.add(Lotto.generateLotto(new ManualLottoGenerator(List.of(1, 2, 3, 4, 5, 6))));
+        lottos.add(Lotto.generateLotto(new ManualLottoGenerator(List.of(11, 12, 13, 14, 15, 16))));
+        return lottos;
     }
 
     @Test
     @DisplayName("모든 로또 우승 로또와 비교하는 기능 로또 수만큼 카운트 세는지 확인하는 테스트")
     void compareAllLottosWithWinningLottoTest() {
-        Lotto winningLotto = new Lotto(Stream.of(3, 4, 5, 6, 8, 9)
-                .map(LottoNumber::new)
-                .collect(Collectors.toSet()));
+        Lottos lottos = makeLottos();
+        Set<LottoNumber> winningLotto = Set.of(3, 4, 5, 6, 8, 9)
+                .stream()
+                .map(LottoNumber::valueOf)
+                .collect(Collectors.toSet());
 
-        assertThat(lottos.compareAllLottosWithWinningLotto(winningLotto).size()).isEqualTo(2);
+        assertThat(lottos.compareAllLottosWithWinningLotto(winningLotto).size()).isEqualTo(3);
     }
 
     @Test
     @DisplayName("모든 로또 보너스넘버 포함 확인 기능 로또 수만큼 카운트 세는지 확인하는 테스트")
     void compareAllLottosWithBonusNumberTest() {
-        LottoNumber bonusNumber = new LottoNumber(3);
+        Lottos lottos = makeLottos();
+        LottoNumber bonusNumber = LottoNumber.valueOf(3);
 
-        assertThat(lottos.compareAllLottosWithBonusNumber(bonusNumber).size()).isEqualTo(2);
+        assertThat(lottos.checkAllLottosContainNumber(bonusNumber).size()).isEqualTo(3);
     }
 }
